# Calculo_Estructural

./: ALINEACION_Y_DEPENDENCIAS.md  CALCULIX_BUILD_REPORT.md  DEVELOPER_GUIDE.md  DOCUMENTACION_RENOMBRADO_BINARIOS.md  DOCUMENTACION_TECNICA_FINAL.md  FIREBASE_TESTING_PROCEDURE.md  GEMINI.md  GUIA_PRUEBAS_INGENIERIA.md  GUIA_VALIDACION_LOCAL.md  IMPLEMENTATION_PLAN.md  INFORME_ARQUITECTURA_DETALLADO.md  INFORME_COMPILACION_CALCULIX.md  INFORME_SCENEVIEW_MIGRACION.md  MANUAL_USUARIO.md  NOTA_NOMENCLATURA_BINARIOS.md  NUEVO_PLAN_FUTURO.md  NUEVO_PLAN_IMPLEMENTACION.md  PLAN_SUBAGENTES.md  PROGRESS_REPORT.md  PROYECTO_ESTRUCTURA_AUXILIAR.md  README.md  REPORTE_ACTUALIZACION_CODIGO.md  REPORTE_ANALISIS_DEPENDENCIAS.md  REPORTE_AUDITORIA.md  REPORTE_CALCULIX.md  REPORTE_CRITICO_RUTAS.md  REPORTE_DEPENDENCIAS_BINARIOS.md  REPORTE_FASE1.md  REPORTE_LIMPIEZA_ASSETS.md  REPORTE_REESTRUCTURACION_BINARIOS.md  REPORTE_REPARACION_BINARIOS.md  REPORTE_TECNICO_FINAL_IMPLEMENTACION.md  REPORTE_TECNICO_SIMULACION.md  SPOOLES_PATCH_SUMMARY.md  TestInp.java  TestParser.java  VALIDACION_CALCULIX_LOCAL.md  binary_map.txt  build.gradle  build_arpack_custom.sh  (+38 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: materials.json  sections.json
app/src/main/cpp/: AnalysisModel.cpp  CMakeLists.txt  CalculixRunner.cpp  OcctBooleanJNI.cpp  OcctPrimitivesJNI.cpp  ProjectStore.cpp  frd_converter.cpp  native-lib.cpp
app/src/main/cpp/include/: AnalysisModel.hpp  CalculixRunner.hpp  MEDimport.hxx  ProjectStore.hpp  gmsh.h  gmsh.h_cwrap  med.hf77  med.hf90  medC_win_dll.h  medequivalence.h  medfamily.h  medfile.h  medfilter.h  medlink.h  medparameter.h  openblas_config.h
app/src/main/cpp/include/2.3.6/: med.h  med23v30_proto.h
converter_prototype/: frd2glb  frd2glb.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/: libEGL.so.1  libGLESv2.so.2
tests/: test_analysis_model.cpp  test_calculix_runner.cpp  test_project_store.cpp
validation/: beam.frd  beam.inp
(+273 files in other folders)
